# android_finger_ocr

./: .README.md.swp  .gitignore  OpenCV-4.5.0-android-sdk  README.md  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: BiseNet.param  bisenet.param  handseg.param
app/src/main/cpp/: OcrLite.cpp  camera.h  camera_jni.cpp  detect.cpp  face_jni.cpp  hand.cpp  hand.h  ncnn_centerface.cpp  ncnn_centerface.h  recognize.cpp
app/src/main/cpp/include/ncnn/: platform.h
app/src/main/java/com/benjaminwan/ocrlibrary/: OcrEngine.kt
app/src/main/java/com/health/service/face/: CameraTransform.java  Face.java  FaceAlign.java  FaceInfo.java  HandSeg.java  MainActivity.java  Retrieval.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
ncnn_local_test/: handseg.cpp
